[package]
name = "cketh_tutorial_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
b3_utils = { version = "0.11.0", features = ["ledger"] }
ic-evm-utils = "1.0.0"
evm-rpc-canister-types = "1.0.0" 
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
icrc-ledger-types = "0.1.6"
lazy_static = "1.5.0"